<resources>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="or">или</string>
    <string name="regist">Regist</string>
    <string name="login">Login</string>
    <string name="have_account_text">"Not have an account? "</string>
    <string name="enter_the_email">Enter the email</string>
    <string name="enter_the_password">Enter the password</string>
</resources>